force-app/main/default/objects/Shipping_information__c/Shipping_information__c.object-meta.xml
<CustomObject>
    <label>シッピング情報</label>
    <nameField>
        <label>パターン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>