force-app/main/default/objects/Shipping_information__c/fields/export_ptn_no__c.field-meta.xml
<CustomField>
    <fullName>export_ptn_no__c</fullName>
    <label>輸出パターンNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>