force-app/main/default/objects/Shipping_information__c/fields/inspection_kbn__c.field-meta.xml
<CustomField>
    <fullName>inspection_kbn__c</fullName>
    <label>検査</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>不要</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>必要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>