force-app/main/default/objects/Shipping_information__c/fields/Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Notes__c</fullName>
    <label>請求注意事項</label>
    <type>TextArea</type>
</CustomField>