force-app/main/default/objects/Shipping_information__c/fields/loading_method_kbn__c.field-meta.xml
<CustomField>
    <fullName>loading_method_kbn__c</fullName>
    <label>積載方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>RORO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Container 40HC</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Container 20FT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>