force-app/main/default/objects/Shipping_information__c/fields/loading_method_kbn_tx__c.field-meta.xml
<CustomField>
    <fullName>loading_method_kbn_tx__c</fullName>
    <description>与儀</description>
    <formula>CASE(  loading_method_kbn__c ,
&quot;1&quot;,&quot;RORO&quot;,
&quot;2&quot;,&quot;Container 40HC&quot;,
&quot;3&quot;,&quot;Container 20FT&quot;,
&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積載方法</label>
    <type>Text</type>
</CustomField>