force-app/main/default/objects/Shipping_information__c/fields/loading_shape_kbn__c.field-meta.xml
<CustomField>
    <fullName>loading_shape_kbn__c</fullName>
    <label>積載形状</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Complete Unit</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Order Cut</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>