force-app/main/default/objects/Shipping_information__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>シッピング情報</relationshipLabel>
    <relationshipName>member_auction_Shipping_information</relationshipName>
    <type>Lookup</type>
</CustomField>