force-app/main/default/objects/Shipping_information__c/fields/Other_Shipping_Rules__c.field-meta.xml
<CustomField>
    <fullName>Other_Shipping_Rules__c</fullName>
    <label>その他貿易ルール</label>
    <type>TextArea</type>
</CustomField>