force-app/main/default/objects/Shipping_information__c/fields/payment_method_kbn__c.field-meta.xml
<CustomField>
    <fullName>payment_method_kbn__c</fullName>
    <label>支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>FOB</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>CFR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>