force-app/main/default/objects/Shipping_information__c/fields/payment_method_kbn_tx__c.field-meta.xml
<CustomField>
    <fullName>payment_method_kbn_tx__c</fullName>
    <description>与儀</description>
    <formula>CASE( payment_method_kbn__c,
&quot;1&quot;,&quot;FOB&quot;,
&quot;2&quot;,&quot;CFR&quot;,
&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>支払方法</label>
    <type>Text</type>
</CustomField>