force-app/main/default/objects/Shipping_information__c/fields/place_country_kbn__c.field-meta.xml
<CustomField>
    <fullName>place_country_kbn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>仕向地(国)</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>シッピング情報</relationshipLabel>
    <relationshipName>Shipping_Country</relationshipName>
    <type>Lookup</type>
</CustomField>