force-app/main/default/objects/Shipping_information__c/fields/place_country_kbn_tx__c.field-meta.xml
<CustomField>
    <fullName>place_country_kbn_tx__c</fullName>
    <description>与儀</description>
    <formula>place_country_kbn__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕向地(国)</label>
    <type>Text</type>
</CustomField>