force-app/main/default/objects/Shipping_information__c/fields/place_harbor_kbn__c.field-meta.xml
<CustomField>
    <fullName>place_harbor_kbn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>仕向地(港)</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>シッピング情報</relationshipLabel>
    <relationshipName>Shipping_Port</relationshipName>
    <type>Lookup</type>
</CustomField>