force-app/main/default/objects/Shipping_information__c/fields/place_harbor_kbn_tx__c.field-meta.xml
<CustomField>
    <fullName>place_harbor_kbn_tx__c</fullName>
    <formula>place_harbor_kbn__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕向地(港)</label>
    <type>Text</type>
</CustomField>