force-app/main/default/objects/Shipping_information__c/fields/ssha_stei__c.field-meta.xml
<CustomField>
    <fullName>ssha_stei__c</fullName>
    <label>船社指定</label>
    <length>255</length>
    <type>Text</type>
</CustomField>