force-app/main/default/objects/Shipping_information__c/fields/Torimenpo_Required__c.field-meta.xml
<CustomField>
    <fullName>Torimenpo_Required__c</fullName>
    <label>トリメンポ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>全て必要</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>必要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>