force-app/main/default/objects/Shipping_information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>export_ptn_no__c</columns>
    <columns>loading_method_kbn__c</columns>
    <columns>loading_shape_kbn__c</columns>
    <columns>payment_method_kbn__c</columns>
    <columns>inspection_kbn__c</columns>
    <columns>marine_insurance_kbn__c</columns>
    <columns>ssha_stei__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>